force-app/main/default/objects/Item__c/Item__c.object-meta.xml
<CustomObject>
    <description>Contains the entire details of an Item  ,having separate sections for each type of detail such as Boat Details, Engine Details, Trailer Details, Transmission &amp; Gearbox Details, and Payment Details.
Child Relationship with: Order and Manufacturer</description>
    <label>Item</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>