force-app/main/default/objects/Item__c/fields/Battery_Voltage__c.field-meta.xml
<CustomField>
    <fullName>Battery_Voltage__c</fullName>
    <label>Battery Voltage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>