force-app/main/default/objects/Item__c/fields/Boat_Beam_in_Feets__c.field-meta.xml
<CustomField>
    <fullName>Boat_Beam_in_Feets__c</fullName>
    <description>Specify the height of the Boat Beam (in feets)</description>
    <label>Boat Beam(in Feets)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>