force-app/main/default/objects/Item__c/fields/Boat_Draft_in_Feets__c.field-meta.xml
<CustomField>
    <fullName>Boat_Draft_in_Feets__c</fullName>
    <description>Specifies the height of the Boat Draft (in feets)</description>
    <label>Boat Draft(in Feets)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>