force-app/main/default/objects/Item__c/fields/Boat_Engine_Hours__c.field-meta.xml
<CustomField>
    <fullName>Boat_Engine_Hours__c</fullName>
    <label>Boat Engine Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>