force-app/main/default/objects/Item__c/fields/Boat_Full_Capacity_USG__c.field-meta.xml
<CustomField>
    <fullName>Boat_Full_Capacity_USG__c</fullName>
    <description>Specifies the full capacity of the Boat</description>
    <label>Boat Full Capacity(USG)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>