force-app/main/default/objects/Item__c/fields/Boat_HIN_No__c.field-meta.xml
<CustomField>
    <fullName>Boat_HIN_No__c</fullName>
    <description>Specifies the Boat&apos;s Hull Identification Number</description>
    <label>Boat HIN No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>