force-app/main/default/objects/Item__c/fields/Boat_Length_in_Feets__c.field-meta.xml
<CustomField>
    <fullName>Boat_Length_in_Feets__c</fullName>
    <description>Specifies the Boat Length (in feets)</description>
    <label>Boat Length(in Feets)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>