force-app/main/default/objects/Item__c/fields/Boat_Manufacture_Date__c.field-meta.xml
<CustomField>
    <fullName>Boat_Manufacture_Date__c</fullName>
    <description>Specifies the Boat Manufacture Date</description>
    <label>Boat Manufacture Date</label>
    <type>Date</type>
</CustomField>