force-app/main/default/objects/Item__c/fields/Boat_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Boat_Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specifies the Manufacturer of the Boat</description>
    <label>Boat Manufacturer</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Manufacturer__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Boat Manufacturer</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Manufacturer__c</referenceTo>
    <relationshipLabel>Items (Boat Manufacturer)</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>