force-app/main/default/objects/Item__c/fields/Boat_Model__c.field-meta.xml
<CustomField>
    <fullName>Boat_Model__c</fullName>
    <description>Specifies the model of the boat</description>
    <inlineHelpText>Please specify your Boat Model</inlineHelpText>
    <label>Boat Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>