force-app/main/default/objects/Item__c/fields/Boat_Model_Variant__c.field-meta.xml
<CustomField>
    <fullName>Boat_Model_Variant__c</fullName>
    <label>Boat Model Variant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>