force-app/main/default/objects/Item__c/fields/Boat_Person_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Boat_Person_Capacity__c</fullName>
    <description>Specifies the capacity of the number of Persons on the  boat</description>
    <label>Boat Person Capacity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>