force-app/main/default/objects/Item__c/fields/Boat_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Boat_Registration_Number__c</fullName>
    <label>Boat Registration Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>