force-app/main/default/objects/Item__c/fields/Boat_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Boat_Serial_Number__c</fullName>
    <description>Specifies the Boat Serial Number of type Text</description>
    <label>Boat Serial Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>