force-app/main/default/objects/Item__c/fields/Boat_Status__c.field-meta.xml
<CustomField>
    <fullName>Boat_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup on Item object.</description>
    <label>Boat Status</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Manufacturer__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Boat Manufacturer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Manufacturer__c</referenceTo>
    <relationshipLabel>Items (Boat Status)</relationshipLabel>
    <relationshipName>Items1</relationshipName>
    <type>Lookup</type>
</CustomField>