force-app/main/default/objects/Item__c/fields/Boat_Type__c.field-meta.xml
<CustomField>
    <fullName>Boat_Type__c</fullName>
    <label>Boat Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ski Boats</fullName>
            </value>
            <value>
                <fullName>Fishing Boats</fullName>
            </value>
            <value>
                <fullName>Run About</fullName>
            </value>
            <value>
                <fullName>Pontoon Boats</fullName>
            </value>
            <value>
                <fullName>Center Console</fullName>
            </value>
            <value>
                <fullName>Jet Ski</fullName>
            </value>
            <value>
                <fullName>V-drive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>