force-app/main/default/objects/Item__c/fields/Boat_Weight_in_lbs__c.field-meta.xml
<CustomField>
    <fullName>Boat_Weight_in_lbs__c</fullName>
    <description>Specifies the weight of the Boat in lbs</description>
    <label>Boat Weight(in lbs)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>