force-app/main/default/objects/Item__c/fields/BoatFix_Device_Id__c.field-meta.xml
<CustomField>
    <fullName>BoatFix_Device_Id__c</fullName>
    <label>BoatFix Device Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>