force-app/main/default/objects/Item__c/fields/Concierge_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Concierge_End_Date__c</fullName>
    <label>Concierge End Date</label>
    <type>Date</type>
</CustomField>