force-app/main/default/objects/Item__c/fields/Concierge_Status_F__c.field-meta.xml
<CustomField>
    <fullName>Concierge_Status_F__c</fullName>
    <formula>IF (TODAY() &lt; Concierge_End_Date__c, &quot;Active&quot;, &quot;Inactive&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Concierge Status</label>
    <type>Text</type>
</CustomField>