force-app/main/default/objects/Item__c/fields/Control_Box__c.field-meta.xml
<CustomField>
    <fullName>Control_Box__c</fullName>
    <label>Control Box</label>
    <length>255</length>
    <type>Text</type>
</CustomField>