force-app/main/default/objects/Item__c/fields/CreatedDateCustom__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateCustom__c</fullName>
    <formula>CreatedDate</formula>
    <inlineHelpText>Displays the Created Date in short Date Format.</inlineHelpText>
    <label>CreatedDateCustom</label>
    <type>Date</type>
</CustomField>