force-app/main/default/objects/Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Describes a short description</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>