force-app/main/default/objects/Item__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Specifies the Discounted/Negotiated Price</description>
    <label>Discount/Negotiated Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>