force-app/main/default/objects/Item__c/fields/Drive_Type__c.field-meta.xml
<CustomField>
    <fullName>Drive_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specifies the Drive Type of the Boat</description>
    <label>Drive Type</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Manufacturer__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Boat Manufacturer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Manufacturer__c</referenceTo>
    <relationshipLabel>Items (Drive Type)</relationshipLabel>
    <relationshipName>Items5</relationshipName>
    <type>Lookup</type>
</CustomField>