force-app/main/default/objects/Item__c/fields/Duplicate_HIN__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_HIN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate HIN</label>
    <type>Checkbox</type>
</CustomField>