force-app/main/default/objects/Item__c/fields/Engine_2_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Engine_2_Serial_Number__c</fullName>
    <description>Specifies the Engine 2 Serial Number</description>
    <label>Engine 2 Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>