force-app/main/default/objects/Item__c/fields/Engine_Manufacture_Date__c.field-meta.xml
<CustomField>
    <fullName>Engine_Manufacture_Date__c</fullName>
    <description>Specifies the Engine Manufacture Date</description>
    <label>Engine Manufacture Date</label>
    <type>Date</type>
</CustomField>