force-app/main/default/objects/Item__c/fields/Engine_Model__c.field-meta.xml
<CustomField>
    <fullName>Engine_Model__c</fullName>
    <description>Specifies the Engine Model</description>
    <inlineHelpText>Please specify the Engine Model</inlineHelpText>
    <label>Engine Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>