force-app/main/default/objects/Item__c/fields/Extended_Warranty_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Extended_Warranty_End_Date__c</fullName>
    <label>Extended Warranty End Date</label>
    <type>Date</type>
</CustomField>