force-app/main/default/objects/Item__c/fields/Extended_Warranty_Provider__c.field-meta.xml
<CustomField>
    <fullName>Extended_Warranty_Provider__c</fullName>
    <label>Extended Warranty Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>