force-app/main/default/objects/Item__c/fields/Hailing_Port__c.field-meta.xml
<CustomField>
    <fullName>Hailing_Port__c</fullName>
    <label>Hailing Port</label>
    <length>255</length>
    <type>Text</type>
</CustomField>