force-app/main/default/objects/Item__c/fields/Link_To_Item__c.field-meta.xml
<CustomField>
    <fullName>Link_To_Item__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+Id, &quot;LinkToItem&quot; , &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link To Item</label>
    <type>Text</type>
</CustomField>