force-app/main/default/objects/Item__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Showroom</fullName>
            </value>
            <value>
                <fullName>Used Boat Lot</fullName>
            </value>
            <value>
                <fullName>Over Flow Lot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>