force-app/main/default/objects/Item__c/fields/M_Order__c.field-meta.xml
<CustomField>
    <fullName>M_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup on Order</description>
    <label>Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>