force-app/main/default/objects/Item__c/fields/Official__c.field-meta.xml
<CustomField>
    <fullName>Official__c</fullName>
    <label>Official</label>
    <length>255</length>
    <type>Text</type>
</CustomField>