force-app/main/default/objects/Item__c/fields/QR_Code__c.field-meta.xml
<CustomField>
    <fullName>QR_Code__c</fullName>
    <formula>IMAGE(&quot;http://api.qrserver.com/v1/create-qr-code/?size=72x72&amp;data=&quot; + LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+Id,&quot;scan this&quot;)</formula>
    <label>QR Code</label>
    <type>Text</type>
</CustomField>