force-app/main/default/objects/Item__c/fields/Related_to_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Specifies the Inventory to which the Boat is related with</inlineHelpText>
    <label>Related to Inventory</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>