force-app/main/default/objects/Item__c/fields/Related_To_Product__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related To Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>