force-app/main/default/objects/Item__c/fields/Shifter__c.field-meta.xml
<CustomField>
    <fullName>Shifter__c</fullName>
    <label>Shifter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>