force-app/main/default/objects/Item__c/fields/Side__c.field-meta.xml
<CustomField>
    <fullName>Side__c</fullName>
    <label>Side</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>