force-app/main/default/objects/Item__c/fields/Stbd_Lower_Unit_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Stbd_Lower_Unit_if_applicable__c</fullName>
    <label>Stbd Lower Unit if applicable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>