force-app/main/default/objects/Item__c/fields/Trade_In_Comments__c.field-meta.xml
<CustomField>
    <fullName>Trade_In_Comments__c</fullName>
    <description>Specifies the Comments</description>
    <label>Trade In Comments</label>
    <type>TextArea</type>
</CustomField>