force-app/main/default/objects/Item__c/fields/Trade_In_Engine__c.field-meta.xml
<CustomField>
    <fullName>Trade_In_Engine__c</fullName>
    <description>Specifies the Engine Option.</description>
    <label>Trade In Engine</label>
    <length>50</length>
    <type>Text</type>
</CustomField>