force-app/main/default/objects/Item__c/fields/Trade_In_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Trade_In_Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trade In Manufacturer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Manufacturer__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Boat Manufacturer</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Manufacturer__c</referenceTo>
    <relationshipName>Items6</relationshipName>
    <type>Lookup</type>
</CustomField>