force-app/main/default/objects/Item__c/fields/Trade_In_Model__c.field-meta.xml
<CustomField>
    <fullName>Trade_In_Model__c</fullName>
    <description>Specifies the Model</description>
    <label>Trade In Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>