force-app/main/default/objects/Item__c/fields/Trade_In_Price_Value__c.field-meta.xml
<CustomField>
    <fullName>Trade_In_Price_Value__c</fullName>
    <description>Specifies the Price/Value</description>
    <label>Trade In Price/Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>