force-app/main/default/objects/Item__c/fields/Trade_In_Trailer__c.field-meta.xml
<CustomField>
    <fullName>Trade_In_Trailer__c</fullName>
    <description>Specifies the Trailer Information</description>
    <label>Trade In Trailer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>