force-app/main/default/objects/Item__c/fields/Trade_Length__c.field-meta.xml
<CustomField>
    <fullName>Trade_Length__c</fullName>
    <label>Trade Length</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>