force-app/main/default/objects/Item__c/fields/Trade_Price__c.field-meta.xml
<CustomField>
    <fullName>Trade_Price__c</fullName>
    <description>Any price entered here will show up on the Search Dealer Network screen and will be visible to other dealers that may be interested in trading inventory.</description>
    <label>Trade Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>