force-app/main/default/objects/Item__c/fields/Trailer_HIN_No__c.field-meta.xml
<CustomField>
    <fullName>Trailer_HIN_No__c</fullName>
    <description>Specifies the Trailer&apos;s Hull Identification Number</description>
    <label>Trailer HIN No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>