force-app/main/default/objects/Item__c/fields/Trailer_Last_Service__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Last_Service__c</fullName>
    <description>Specifies the Trailer&apos;s Last Service</description>
    <label>Trailer Last Service</label>
    <type>Date</type>
</CustomField>