force-app/main/default/objects/Item__c/fields/Trailer_Manufacture_Date__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Manufacture_Date__c</fullName>
    <description>Specifies the Manufacture Date of the Trailer</description>
    <label>Trailer Manufacture Date</label>
    <type>Date</type>
</CustomField>