force-app/main/default/objects/Item__c/fields/Trailer_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup on Manufacturer to specify the Manufacturer</description>
    <label>Trailer Manufacturer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Manufacturer__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Boat Manufacturer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Manufacturer__c</referenceTo>
    <relationshipName>Items3</relationshipName>
    <type>Lookup</type>
</CustomField>