force-app/main/default/objects/Item__c/fields/Trailer_Model__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Model__c</fullName>
    <description>Specifies the Model of the Trailer</description>
    <label>Trailer Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>