force-app/main/default/objects/Item__c/fields/Trailer_Price__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Price__c</fullName>
    <description>Specifies the Price of the Trailer</description>
    <label>Trailer Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>