force-app/main/default/objects/Item__c/fields/Trailer_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Serial_Number__c</fullName>
    <description>Specifies the Serial Number of the Trailer</description>
    <label>Trailer Serial Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>