force-app/main/default/objects/Item__c/fields/Transmission_Gearbox_HIN_No__c.field-meta.xml
<CustomField>
    <fullName>Transmission_Gearbox_HIN_No__c</fullName>
    <description>Specifies the Transmission &amp; Gearbox Hull Identification Number</description>
    <label>Transmission &amp; Gearbox HIN No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>