force-app/main/default/objects/Item__c/fields/Transmission_Gearbox_Manufacture_Date__c.field-meta.xml
<CustomField>
    <fullName>Transmission_Gearbox_Manufacture_Date__c</fullName>
    <description>Specifies the manufacture date of Transmission &amp; Gearbox</description>
    <label>Transmission &amp; Gearbox Manufacture Date</label>
    <type>Date</type>
</CustomField>